index.html updated and home page done

--- a/Assets/Website/index.html
+++ b/Assets/Website/index.html
@@ -8,16 +8,23 @@
   <title>Eco-Builder</title>
 </head>
 <body>
-<header class="">
-  <nav class="navbar">
-    <ul class="">
-      <li><a href="Home">Home</a></li>
-      <li><a href="About">About</a></li>
-      <li><a href="Contact Us">Contact Us</a></li>
-    </ul>
-   </nav>
-   <div class="fas fa-bars"></div>
-</header>
-<script src="/main.js"></script>
-</body>
-</html>
+  <header class="">
+    <a href="#home" class=""><img src="/B216_1.webp" alt="" width="50" class="logo"></a>
+    <nav class="navbar">
+      <ul class="">
+        <li><a href="Home">Home</a></li>
+        <li><a href="About">About</a></li>
+        <li><a href="Contact Us">Contact Us</a></li>
+      </ul>
+     </nav>
+  </header>
+  <section class="home" id="home">
+    <div class="content">
+      <h1 class="">ECO-BUILDER</h1>
+      <p class="">In the heart of a lush valley lies a quaint village—a place where tradition and nature harmonize. But change is in the air. Inspired by open innovation, you step into the role of a visionary leader. Your mission? Transform this humble village into a thriving, eco-conscious metropolis.</p>
+      <a href="" class="btn">Play the Game</a>
+    </div>
+  </section>
+  <script src="/main.js"></script>
+  </body>
+  </html>
