Logo updated in html,invert filter applied in css,logo image changed

--- a/Assets/Website/index.html
+++ b/Assets/Website/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 <header class="">
-  <a href="#home" class=""><img src="/B216_1.webp" alt="" width="50" class="logo"></a>
+  <a href="#home" class="homelogo"><img src="/SH.logo.png" alt="" width="55" class="logo"></a>
   <nav class="navbar">
     <ul class="">
       <li><a href="#home">Home</a></li>
