gameFile link updated in the game

--- a/Assets/Website/index.html
+++ b/Assets/Website/index.html
@@ -52,7 +52,7 @@
             <h5>Global Impact:</h5><p>Inspire neighboring regions, create a blueprint for sustainable urban development.</p>
             <br><br><br><br>
            
-           <a href="" class="btn">Play the Game</a>
+           <a href="https://sleepyheadgame.itch.io/ecobuilder" class="btn">Play the Game</a>
       </div>
     </div>
 </section>
